tests/functional/lang/eval-fail-add-1.err.exp
error:
       … while calling the 'add' builtin
         at /pwd/lang/eval-fail-add-1.nix:1:1:
            1| builtins.add "foo" 1
             | ^
            2|

       … while evaluating the first argument of the addition

       error: expected an integer but found a string: "foo"
